--- a/src/index.css
+++ b/src/index.css
@@ -3,7 +3,7 @@
 /* --- VARIABLES --- */
 :root {
   --bg-color: #101010;
-  --hl-color: #009e66;
+  --hl-color: #d10610;
   --text-color: #f3f3f3;
   --secondary-text-color: #9f9f9f;
   --grey: #9f9f9f76;
@@ -82,7 +82,7 @@ body {
 }
 
 .btn:hover {
-  background-color: #03b979;
+  background-color: #d10610;
 }
 
 /* --- MOBILE STYLES --- */
@@ -94,11 +94,11 @@ header {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  margin-left: 10px;
+  margin-left: 0px;
 }
 
 .logo {
-  height: 30px;
+  height: 80px;
 }
 
 .links {
