--- a/src/pages/about/about.css
+++ b/src/pages/about/about.css
@@ -70,8 +70,9 @@
   color: var(--hl-color);
 }
 
-.infoContainer a:hover {
-  color: #03b979;
+.infoContainer a:hover { 
+  /* hover */
+  color: #ff5678;
 }
 
 .buttonContainer {
